# test_convolution

./: .gitignore  README.md
OpenCL/: CMakeLists.txt
OpenCL/Emulation/: kernel_convolution.cl
OpenCL/inc/: clean.h  convolution.h  utils.h
OpenCL/kernel_convolution/CLEAN/: kernel_clean.cl
OpenCL/kernel_convolution/CLEAN/NDR/: kernel_clean.cl
OpenCL/kernel_convolution/CLEAN/SWI/: kernel_clean.cl
OpenCL/kernel_convolution/Flik_conv2D/Shift_reg/: compile.sh
OpenCL/kernel_convolution/Flik_conv2D/Shift_reg/15x15/: kernel_convolution.cl
OpenCL/kernel_convolution/Flik_conv2D/Shift_reg/7x7/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/: compile.sh
OpenCL/kernel_convolution/Stratix/Local/15x15/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/15x15_c/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/3x3/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/5x5/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/7x7/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local/9x9/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Local_16/: compile.sh
OpenCL/kernel_convolution/Stratix/Local_16/15x15_a/: kernel_convolution.cl
OpenCL/kernel_convolution/Stratix/Naive/: compile.sh
OpenCL/kernel_convolution/Stratix/Shift_reg/: compile.sh
OpenCL/kernel_convolution/Stratix/Unroll/: compile.sh
OpenCL/src/: clean.cpp  clean_opencl.cpp  convolution_cpu.cpp  convolution_opencl.cpp  main.cpp  utils.cpp
OpenCL/test/: kernel_convolution.cl
inc/: ImageUtils.h
src/: main.cpp  (+1 more)
(+58 files in other folders)
